; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_vo.c_check_vo_caps.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_vo.c_check_vo_caps.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vo = type { %struct.TYPE_4__*, %struct.TYPE_3__* }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i32 }

@VO_CAP_ROTATE90 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [88 x i8] c"Video is flagged as rotated by %d degrees, but the video output does not support this.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vo*)* @check_vo_caps to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_vo_caps(%struct.vo* %0) #0 {
  %2 = alloca %struct.vo*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.vo* %0, %struct.vo** %2, align 8
  %5 = load %struct.vo*, %struct.vo** %2, align 8
  %6 = getelementptr inbounds %struct.vo, %struct.vo* %5, i32 0, i32 1
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %3, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %34

12:                                               ; preds = %1
  %13 = load i32, i32* %3, align 4
  %14 = srem i32 %13, 90
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %12
  br label %25

17:                                               ; preds = %12
  %18 = load %struct.vo*, %struct.vo** %2, align 8
  %19 = getelementptr inbounds %struct.vo, %struct.vo* %18, i32 0, i32 0
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load i32, i32* @VO_CAP_ROTATE90, align 4
  %24 = and i32 %22, %23
  br label %25

25:                                               ; preds = %17, %16
  %26 = phi i32 [ 0, %16 ], [ %24, %17 ]
  store i32 %26, i32* %4, align 4
  %27 = load i32, i32* %4, align 4
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %33, label %29

29:                                               ; preds = %25
  %30 = load %struct.vo*, %struct.vo** %2, align 8
  %31 = load i32, i32* %3, align 4
  %32 = call i32 @MP_WARN(%struct.vo* %30, i8* getelementptr inbounds ([88 x i8], [88 x i8]* @.str, i64 0, i64 0), i32 %31)
  br label %33

33:                                               ; preds = %29, %25
  br label %34

34:                                               ; preds = %33, %1
  ret void
}

declare dso_local i32 @MP_WARN(%struct.vo*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
